# MultiThreadApp

./: .gitignore  CMakeLists.txt  MultiThreadApp.cbp  MultiThreadApp.cpp  MultiThreadApp.h  TaskT.cpp  TaskT.h  Task_t.cpp  Task_t.h  main.cpp  stdTaskManager.cpp  stdTaskManager.h
TaskTypes/: InfinityTask.cpp  InfinityTask.h  MergeSortTask.cpp  MergeSortTask.h  PyramidSort.cpp  PyramidSort.h  PyromidSort.cpp  PyromidSort.h  PyromidTest.cpp  QuickSortTask.cpp  QuickSortTask.h  TaskT.cpp  TaskT.h
tests/: CMakeLists.txt  RunTests.cpp  TaskTTests.cpp
